tests/baselines/reference/parserES5ComputedPropertyName1.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts(2,5): error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts(2,6): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName1.ts (2 errors) ====
    declare class C {
        [e]: number 
        ~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in symbol.
         ~
!!! error TS2304: Cannot find name 'e'.
    }